ms3.tf
resource "azurerm_public_ip" "pip_ms3" {
    name                = "public_ip_ms3"
    location            = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name
    allocation_method   = "Static"
    sku                 = "Standard"
}

resource "azurerm_network_interface" "ni_ms3" {
    name                = "ni_ms3"
    location            = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name

    ip_configuration {
        name                          = "ipconfig"
        subnet_id                     = azurerm_subnet.subnet.id
        private_ip_address_allocation = "Dynamic"
        public_ip_address_id          = azurerm_public_ip.pip_ms3.id
    }
}

resource "azurerm_windows_virtual_machine" "ms3_machine" {
    name                = "MS3Machine"
    resource_group_name = azurerm_resource_group.rg.name
    location            = azurerm_resource_group.rg.location
    size                = "Standard_D2s_v3"
    admin_username      = var.ms3-user
    admin_password      = var.ms3-password
    network_interface_ids = [azurerm_network_interface.ni_ms3.id]

    os_disk {
        caching              = "ReadWrite"
        storage_account_type = "Premium_LRS"
    }

    source_image_reference {
        publisher = "MicrosoftWindowsServer"
        offer     = "WindowsServer"
        sku       = "2019-Datacenter"
        version   = "latest"
    }
}
